--- a/index.html
+++ b/index.html
@@ -68,7 +68,6 @@
       <img src="/logo.png"
            alt="Logo C.U.R.A."
            class="h-16 w-auto object-contain shrink-0" />
-
       <div class="leading-tight">
         <p class="text-[11px] uppercase tracking-[0.25em] text-cura-accentLight">LEY NACIONAL</p>
         <p class="text-sm font-bold text-white">Transformación Digital Sanitaria Argentina</p>
@@ -704,9 +703,9 @@ document.addEventListener('DOMContentLoaded', function () {
   async function cargarCiudades() {
     if (!provinciaSelect || !ciudadSelect) return;
     const prov = provinciaSelect.value;
-    ciudadSelect.innerHTML = '<option value="">' + 'Cargando ciudades...' + '</option>';
+    ciudadSelect.innerHTML = '<option value="">Cargando ciudades...</option>';
     if (!prov) {
-      ciudadSelect.innerHTML = '<option value="">' + 'Seleccioná una ciudad' + '</option>';
+      ciudadSelect.innerHTML = '<option value="">Seleccioná una ciudad</option>';
       return;
     }
     try {
@@ -714,17 +713,19 @@ document.addEventListener('DOMContentLoaded', function () {
       const res = await fetch(url);
       if (!res.ok) throw new Error();
       const data = await res.json();
-      const localidades = (data.localidades || []).map(function (l) { return l.nombre; })
-        .sort(function (a, b) { return a.localeCompare(b, 'es'); });
-      ciudadSelect.innerHTML = '<option value="">' + 'Seleccioná una ciudad' + '</option>';
-      localidades.forEach(function (nombre) {
+      const localidades = (data.localidades || [])
+        .map(l => l.nombre)
+        .sort((a, b) => a.localeCompare(b, 'es'));
+
+      ciudadSelect.innerHTML = '<option value="">Seleccioná una ciudad</option>';
+      localidades.forEach(nombre => {
         const opt = document.createElement('option');
         opt.value = nombre;
         opt.textContent = nombre;
         ciudadSelect.appendChild(opt);
       });
     } catch (e) {
-      ciudadSelect.innerHTML = '<option value="">' + 'No se pudieron cargar las ciudades' + '</option>';
+      ciudadSelect.innerHTML = '<option value="">No se pudieron cargar las ciudades</option>';
     }
   }
 
@@ -732,21 +733,22 @@ document.addEventListener('DOMContentLoaded', function () {
     provinciaSelect.addEventListener('change', cargarCiudades);
   }
 
+  // Botones / targets
   const btnSumate      = document.getElementById('btn-sumate');
   const targetSumate   = document.getElementById('sumate');
   const btnInfo        = document.getElementById('btn-info');
   const targetInfo     = document.getElementById('informacion');
   const targetContacto = document.getElementById('contacto');
+  const targetInicio   = document.getElementById('inicio');
 
-  // links de menú / footer
-  const navInfoLinks     = document.querySelectorAll('a[href="#informacion"]');
-  const navContactoLinks = document.querySelectorAll('a[href="#contacto"]');
+  // Links del menú
+  const navInicioLinks    = document.querySelectorAll('a[href="#inicio"]');
+  const navInfoLinks      = document.querySelectorAll('a[href="#informacion"]');
+  const navContactoLinks  = document.querySelectorAll('a[href="#contacto"]');
 
-  function smoothScrollTo(element, duration, offset) {
+  // Scroll suave
+  function smoothScrollTo(element, duration = 1700, offset = 200) {
     if (!element) return;
-    if (duration === undefined) duration = 1700;
-    if (offset === undefined) offset = 200;
-
     const targetY = element.getBoundingClientRect().top + window.pageYOffset - offset;
     const startY = window.pageYOffset;
     const distance = targetY - startY;
@@ -758,9 +760,7 @@ document.addEventListener('DOMContentLoaded', function () {
       const progress = Math.min(timeElapsed / duration, 1);
       const ease = 1 - Math.pow(1 - progress, 3); // easeOutCubic
       window.scrollTo(0, startY + distance * ease);
-      if (timeElapsed < duration) {
-        requestAnimationFrame(animation);
-      }
+      if (timeElapsed < duration) requestAnimationFrame(animation);
     }
 
     requestAnimationFrame(animation);
@@ -768,37 +768,46 @@ document.addEventListener('DOMContentLoaded', function () {
 
   // Botón "QUIERO SUMARME"
   if (btnSumate && targetSumate) {
-    btnSumate.addEventListener('click', function (e) {
+    btnSumate.addEventListener('click', e => {
       e.preventDefault();
-      smoothScrollTo(targetSumate, 1700, 200);
+      smoothScrollTo(targetSumate);
     });
   }
 
-  // Botón "Obtén más información"
+  // Botón "Obtener más información"
   if (btnInfo && targetInfo) {
-    btnInfo.addEventListener('click', function (e) {
+    btnInfo.addEventListener('click', e => {
       e.preventDefault();
-      smoothScrollTo(targetInfo, 1700, 200);
+      smoothScrollTo(targetInfo);
     });
   }
 
-  // Link "Información" (navbar y footer)
-  navInfoLinks.forEach(function (link) {
-    if (!targetInfo) return;
-    link.addEventListener('click', function (e) {
+  // ---- LINKS DEL NAVBAR ----
+
+  // INICIO
+  navInicioLinks.forEach(link => {
+    link.addEventListener('click', e => {
       e.preventDefault();
-      smoothScrollTo(targetInfo, 1700, 200);
+      smoothScrollTo(targetInicio);
     });
   });
 
-  // Link "Contacto" (navbar y footer)
-  navContactoLinks.forEach(function (link) {
-    if (!targetContacto) return;
-    link.addEventListener('click', function (e) {
+  // INFORMACIÓN
+  navInfoLinks.forEach(link => {
+    link.addEventListener('click', e => {
       e.preventDefault();
-      smoothScrollTo(targetContacto, 1700, 200);
+      smoothScrollTo(targetInfo);
     });
   });
+
+  // CONTACTO
+  navContactoLinks.forEach(link => {
+    link.addEventListener('click', e => {
+      e.preventDefault();
+      smoothScrollTo(targetContacto);
+    });
+  });
+
 });
 </script>
 
