--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
   <a href="#contacto" class="text-cura-accentLight hover:text-white">Contacto</a>
   <a href="/demonivel2.html"
      class="inline-flex items-center gap-1 text-cura-primary bg-cura-accent rounded-full px-3 py-1 text-xs font-semibold hover:bg-white transition">
-    Demo QR Nivel 2
+    Vista de enfermero escaneando tu credencial
   </a>
 </nav>
 
