--- a/index.html
+++ b/index.html
@@ -80,7 +80,8 @@
   <a href="#inicio" class="text-cura-accentLight hover:text-white">Inicio</a>
   <a href="#informacion" class="text-cura-accentLight hover:text-white">Información</a>
   <a href="#contacto" class="text-cura-accentLight hover:text-white">Contacto</a>
-  <a href="/demonivel2.html"
+ <!--<a href="/demonivel2.html"--->
+  <a href="/random/demo-random.html"
      class="inline-flex items-center gap-1 text-cura-primary bg-cura-accent rounded-full px-3 py-1 text-xs font-semibold hover:bg-white transition">
     Demo Enfermero
   </a>
