--- a/random/demo-random.html
+++ b/random/demo-random.html
@@ -1,5 +1,4 @@
 
-
 <!DOCTYPE html>
 <html lang="es">
 <head>
@@ -47,10 +46,36 @@
         .card-shadow {
             box-shadow: 0 1px 3px rgba(0,0,0,0.05), 0 1px 2px rgba(0,0,0,0.03);
         }
+
+        /* POPUP */
+        .popup {
+            position: fixed;
+            top: 20px;
+            right: 20px;
+            background-color: #004E85;
+            color: #fff;
+            padding: 15px 20px;
+            border-radius: 10px;
+            font-size: 14px;
+            box-shadow: 0 4px 12px rgba(0,0,0,0.2);
+            opacity: 0;
+            pointer-events: none;
+            transition: opacity 0.6s ease;
+            z-index: 9999;
+            max-width: 280px;
+        }
+        .popup.show {
+            opacity: 1;
+        }
     </style>
 </head>
 
 <body class="min-h-screen flex flex-col pt-28 sm:pt-24 font-sans">
+
+<!-- POPUP -->
+<div id="popup" class="popup">
+  <p>Todos los datos e imágenes aquí proporcionados son ficticios.</p>
+</div>
 
 <!-- HEADER -->
 <header class="fixed top-0 left-0 w-full bg-medical-primary text-white shadow-md z-50">
@@ -172,7 +197,7 @@
     </div>
 </footer>
 
-<!-- SCRIPT LÓGICA DEMO -->
+<!-- SCRIPT LÓGICA DEMO + POPUP -->
 <script>
     // Utilidades
     function randInt(min, max) {
@@ -463,6 +488,13 @@
             li.appendChild(spanTipo);
             ulMeds.appendChild(li);
         });
+
+        // Popup
+        const popup = document.getElementById('popup');
+        if (popup) {
+            popup.classList.add('show');
+            setTimeout(() => popup.classList.remove('show'), 6000);
+        }
     });
 </script>
 
