--- a/random/demo-random.html
+++ b/random/demo-random.html
@@ -46,10 +46,21 @@
         .card-shadow {
             box-shadow: 0 1px 3px rgba(0,0,0,0.05), 0 1px 2px rgba(0,0,0,0.03);
         }
+
+        /* POPUP */
+.popup {
+    position: fixed;
+    top: 20
+
     </style>
 </head>
 
 <body class="min-h-screen flex flex-col pt-28 sm:pt-24 font-sans">
+    
+<!-- POPUP -->
+<div id="popup" class="popup">
+  <p>Todos los datos e imágenes aquí proporcionados son ficticios.</p>
+</div>
 
 <!-- HEADER -->
 <header class="fixed top-0 left-0 w-full bg-medical-primary text-white shadow-md z-50">
@@ -513,3 +524,4 @@ document.getElementById("medico-linea-2").textContent = "M.P.: " + mp + " - M.N.
 
 </body>
 </html>
+
