--- a/random/demo-random.html
+++ b/random/demo-random.html
@@ -134,7 +134,7 @@ body {
             <button type="button"
                 class="w-full border border-medical-primary text-medical-primary bg-white font-semibold py-2.5 px-4 rounded flex items-center justify-center gap-2 cursor-default">
                 <i class="ph-fill ph-phone-outgoing text-lg"></i>
-                Llamar Contacto de Emergencia (demo)
+                Llamar Contacto de Emergencia
             </button>
         </div>
     </section>
@@ -204,5 +204,6 @@ document.addEventListener("DOMContentLoaded",()=>{
 
 </body>
 </html>
+
 
 
