--- a/random/demo-random.html
+++ b/random/demo-random.html
@@ -134,12 +134,11 @@ body {
             <button type="button"
                 class="w-full border border-medical-primary text-medical-primary bg-white font-semibold py-2.5 px-4 rounded flex items-center justify-center gap-2 cursor-default">
                 <i class="ph-fill ph-phone-outgoing text-lg"></i>
-                Llamar Contacto de Emergencia
+                Llamar Contacto de Emergencia 
             </button>
         </div>
     </section>
-
-    <!-- ADVERTENCIAS -->
+        <!-- ADVERTENCIAS -->
     <section class="bg-yellow-50 border-l-4 border-yellow-400 rounded-r-lg p-4 flex gap-3 shadow-sm">
         <i class="ph-fill ph-warning text-yellow-600 text-2xl mt-0.5"></i>
         <div>
@@ -148,7 +147,7 @@ body {
         </div>
     </section>
 
-    <!-- CONDICIONES -->
+    <!-- CONDICIONES CLÍNICAS -->
     <section>
         <h3 class="text-xs font-bold text-gray-500 uppercase mb-2">Condiciones Clínicas Relevantes</h3>
         <div id="lista-condiciones" class="grid grid-cols-1 gap-2"></div>
@@ -168,42 +167,190 @@ body {
         </div>
     </section>
 
+    <div class="h-4"></div>
 </main>
 
 <!-- FOOTER -->
 <footer class="mt-auto bg-white border-t text-center py-6">
-    <p class="text-xs font-bold text-gray-500 uppercase">Sistema C.U.R.A.</p>
-    <p class="text-[10px] text-gray-400">Acceso Seguro Nivel 2 · Datos aleatorios de demostración</p>
+    <div class="flex flex-col items-center gap-3">
+        <div class="w-50 h-12 opacity-90">
+            <img src="https://datos.salud.gob.ar/user_images/logo_nuevo_msal_encabezado%202.jpg"
+                 class="w-full h-full object-contain grayscale hover:grayscale-0 transition-all">
+        </div>
+        <p class="text-xs font-bold text-gray-500 uppercase">Sistema C.U.R.A.</p>
+        <p class="text-[10px] text-gray-400">Acceso Seguro Nivel 2 · Datos aleatorios de demostración</p>
+    </div>
 </footer>
 
-<!-- LÓGICA -->
+<!-- SCRIPT LÓGICA COMPLETA -->
 <script>
-function randInt(a,b){return Math.floor(Math.random()*(b-a+1))+a;}
-function choice(a){return a[randInt(0,a.length-1)];}
+/* FUNCIONES RANDOM */
+function randInt(min, max){return Math.floor(Math.random()*(max-min+1))+min;}
+function choice(arr){return arr[randInt(0, arr.length-1)];}
+function fechaRandom(){
+    const y = randInt(1940, 2010);
+    const m = randInt(1,12);
+    const d = randInt(1, [4,6,9,11].includes(m)?30:(m===2?28:31));
+    return {d,m,y};
+}
+function formatear(d,m,y){return d.toString().padStart(2,'0')+'/'+m.toString().padStart(2,'0')+'/'+y;}
+function edad(d,m,y){
+    const n=new Date(y,m-1,d),h=new Date();let e=h.getFullYear()-n.getFullYear();
+    if(h.getMonth()<n.getMonth()||(h.getMonth()===n.getMonth()&&h.getDate()<n.getDate()))e--;
+    return e;
+}
 
-const nombresM=["Franco","Juan","Matías","Lucas","Santiago","Agustín","Nicolás","Tomás"];
-const nombresF=["Luciana","María","Sofía","Camila","Julieta","Antonella"];
-const apellidos=["Paganini","Gómez","Rodríguez","Fernández","López","Pérez"];
+/* LISTAS */
+const nombresM=['Franco','Juan','Lucas','Santiago','Matías','Agustín','Iván','Tomás','Bruno','Ezequiel'];
+const nombresF=['Sofía','Camila','Valentina','Julieta','Martina','Ana','Paula','Rocío','Florencia','Lorena'];
+const apellidos=['Gómez','Rodríguez','Paganini','Fernández','López','Sánchez','Romero','Martínez','García','Argüello'];
+const sangres=['O+','A+','B+','AB+','O-','A-','B-','AB-'];
 
+const medicos = [
+    "Dr. Fabián Alonso","Dra. Julieta Ruiz","Dr. Mauro Etcheverry",
+    "Dra. Florencia Rivas","Dr. Sebastián López","Dra. Ana Beltrán"
+];
+
+/* CATÁLOGOS */
+const condicionesCatalogo = [
+    {titulo:'Diabetes tipo 2', subt:'Control con hipoglucemiantes',
+     adv:['Riesgo de hipoglucemia','Controlar glucemia si está consciente'],
+     meds:[['Metformina 850 mg','Hipoglucemiante'],['Insulina NPH','Insulina']]
+    },
+    {titulo:'Hipertensión arterial',subt:'En tratamiento',
+     adv:['Controlar presión al ingreso','Evitar descensos bruscos'],
+     meds:[['Enalapril 10 mg','IECA'],['Amlodipina 5 mg','Calcioantagonista']]
+    },
+    {titulo:'Asma bronquial',subt:'Leve–moderado',
+     adv:['Consultar uso de broncodilatadores'],
+     meds:[['Salbutamol inhalador','Broncodilatador']]
+    },
+    {titulo:'Ansiedad generalizada',subt:'Tratamiento psiquiátrico',
+     adv:['Posible somnolencia por medicación'],
+     meds:[['Sertralina 100 mg','ISRS']]
+    }
+];
+
+const implantes = [
+    {t:'Placa PHILOS 3,5 mm',d:'Osteosíntesis húmero proximal derecho',a:'Verificar compatibilidad con RM.'},
+    {t:'Stent coronario',d:'Antecedente coronario',a:'Paciente anticoagulado.'},
+    {t:'Prótesis total de rodilla',d:'Artrosis severa',a:'Evitar torsión brusca.'}
+];
+
+/* GENERACIÓN */
 document.addEventListener("DOMContentLoaded",()=>{
 
-    // medico random (MP y MN)
-    const medicoNombre = choice([...nombresM, ...nombresF]) + " " + choice(apellidos);
+    /* FECHA + HORA */
+    const a=new Date();
+    let f=a.toLocaleDateString('es-AR',{weekday:'long',year:'numeric',month:'long',day:'numeric'});
+    const map={enero:"ene",febrero:"feb",marzo:"mar",abril:"abr",mayo:"may",junio:"jun",julio:"jul",agosto:"ago",septiembre:"sep",octubre:"oct",noviembre:"nov",diciembre:"dic"};
+    for(const k in map){if(f.includes(k))f=f.replace(k,map[k]);}
+    f=f.charAt(0).toUpperCase()+f.slice(1);
+    const h=a.toLocaleTimeString('es-AR',{hour:'2-digit',minute:'2-digit',second:'2-digit'});
+    document.getElementById("hora-acceso").innerHTML=f+"<br>"+h+"<br>Acceso registrado.";
+
+    /* MÉDICO RANDOM */
+    const medico = choice(medicos);
     const mp = randInt(10000, 99999);
     const mn = randInt(100000, 999999);
-    document.getElementById("random-medico").innerHTML =
-        `Usuario: ${medicoNombre}<br>M.P.: ${mp} - M.N.: ${mn}`;
 
-    // popup
-    const popup = document.getElementById("popup");
+    document.getElementById("random-medico").innerHTML =
+        `${medico}<br>M.P.: ${mp} · M.N.: ${mn}`;
+
+    /* PACIENTE */
+    const sexo=Math.random()<0.5?'M':'F';
+    const nombre=sexo==='M'?choice(nombresM):choice(nombresF);
+    const apellido=choice(apellidos);
+    document.getElementById("nombre-completo").textContent=nombre+" "+apellido;
+
+    document.getElementById("foto-paciente").src=
+        "https://randomuser.me/api/portraits/"+(sexo==='M'?'men/':'women/')+randInt(1,99)+".jpg";
+
+    const dni=randInt(15000000,50000000);
+    document.getElementById("dni").textContent=dni.toLocaleString('es-AR');
+
+    const fn=fechaRandom();
+    document.getElementById("fecha-nac").textContent=formatear(fn.d,fn.m,fn.y);
+    document.getElementById("edad").textContent=edad(fn.d,fn.m,fn.y);
+
+    document.getElementById("tipo-sangre").textContent=choice(sangres);
+
+    /* CONDICIONES ALEATORIAS */
+    const cantCond=randInt(1,3);
+    const usadas=[];
+    const cont=document.getElementById("lista-condiciones");
+
+    for(let i=0;i<cantCond;i++){
+        const c=choice(condicionesCatalogo);
+        if(usadas.includes(c)) continue;
+        usadas.push(c);
+
+        cont.innerHTML+=`
+        <div class="bg-white border rounded p-3 flex gap-3 card-shadow">
+            <div class="w-8 h-8 rounded-full bg-blue-50 text-blue-600 flex items-center justify-center">
+                <i class="ph-fill ph-heartbeat text-lg"></i>
+            </div>
+            <div>
+                <p class="text-sm font-bold text-gray-800">${c.titulo}</p>
+                <p class="text-xs text-gray-500">${c.subt}</p>
+            </div>
+        </div>`;
+    }
+
+    /* IMPLANTES */
+    const cantImpl=randInt(0,2);
+    const implC=document.getElementById("lista-implantes");
+
+    if(cantImpl===0){
+        implC.innerHTML=`<p class="text-xs text-gray-500 italic">Sin implantes registrados.</p>`;
+    } else {
+        for(let i=0;i<cantImpl;i++){
+            const im=choice(implantes);
+            implC.innerHTML+=`
+            <div class="bg-white border rounded card-shadow">
+                <div class="p-3 flex gap-3">
+                    <div class="w-8 h-8 rounded-full bg-blue-50 text-blue-600 flex items-center justify-center">
+                        <i class="ph ph-first-aid text-lg"></i>
+                    </div>
+                    <div>
+                        <p class="text-sm font-semibold text-gray-800">${im.t}</p>
+                        <p class="text-xs text-gray-500">${im.d}</p>
+                        <p class="text-[11px] text-gray-400 mt-1">${im.a}</p>
+                    </div>
+                </div>
+            </div>`;
+        }
+    }
+
+    /* ADVERTENCIAS */
+    const adv=[];
+    usadas.forEach(c=>adv.push(...c.adv));
+    if(cantImpl>0){implantes.forEach(i=>adv.push(i.a));}
+
+    const advC=document.getElementById("lista-advertencias");
+    adv.forEach(a=>{
+        advC.innerHTML+=`<li>• ${a}</li>`;
+    });
+
+    /* MEDICACIÓN */
+    const meds=document.getElementById("lista-medicacion");
+    usadas.forEach(c=>{
+        c.meds.forEach(m=>{
+            meds.innerHTML+=`
+            <li class="p-3 flex justify-between items-center">
+                <span class="text-sm font-medium">${m[0]}</span>
+                <span class="text-xs bg-gray-100 px-2 py-1 rounded">${m[1]}</span>
+            </li>`;
+        });
+    });
+
+    /* POPUP */
+    const popup=document.getElementById("popup");
     popup.classList.add("show");
     setTimeout(()=>popup.classList.remove("show"),6000);
-
 });
 </script>
 
 </body>
 </html>
-
-
 
