--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
     </p>
 
     <p class="text-sm text-white">
-      Una credencial única y segura que unifica toda la información médica de cada persona.
+     La Ley C.U.R.A. crea la Credencial Única para que tu historia clínica viaje con vos, garantizando una atención más rápida y justa. Tu salud, simplificada y segura en todo el país.
 
     <p class="text-sm text-white">
       Beneficios clave para las personas:
