--- a/random/demo-random.html
+++ b/random/demo-random.html
@@ -5,15 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sistema C.U.R.A. | Nivel 2 (Demo Aleatoria)</title>
 
-    <!-- Fuente Inter -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
 
-    <!-- Phosphor Icons -->
     <script src="https://unpkg.com/@phosphor-icons/web"></script>
 
-    <!-- Tailwind CSS -->
     <script src="https://cdn.tailwindcss.com"></script>
 
     <script>
@@ -69,42 +66,48 @@ body {
 
 <body class="min-h-screen flex flex-col pt-28 sm:pt-24 font-sans">
 
-<!-- POPUP -->
 <div id="popup" class="popup">
   <p>Todos los datos e imágenes aquí proporcionados son ficticios.</p>
 </div>
 
-<!-- HEADER -->
 <header class="fixed top-0 left-0 w-full bg-medical-primary text-white shadow-md z-50">
     <div class="w-full px-4 py-2 flex flex-row items-center justify-between gap-2">
+        
         <div class="flex items-center gap-3 min-w-0">
             <img src="/logo_cura.png" class="h-12 sm:h-16 w-auto object-contain">
             <div class="leading-tight">
                 <h1 class="text-[11px] sm:text-sm font-bold uppercase tracking-wide">
                     SISTEMA DE SALUD DIGITAL C.U.R.A.
                 </h1>
-                <p class="text-[10px] sm:text-[11px] opacity-80 tracking-wider">
+                <p class="text-[10px] sm:text-[11px] opacity-80 tracking-wider hidden sm:block">
                     NIVEL DE ACCESO 2 (URGENCIAS) · DEMO ALEATORIA
+                </p>
+                 <p class="text-[9px] opacity-80 tracking-wider sm:hidden">
+                    ACCESO NIVEL 2
                 </p>
             </div>
         </div>
 
-        <div class="flex flex-col items-end leading-tight min-w-0 w-full">
+        <button onclick="window.location.reload()" 
+                class="bg-white text-medical-primary hover:bg-gray-100 transition-colors px-3 py-1.5 rounded flex items-center gap-2 shadow-sm flex-shrink-0 mx-2 cursor-pointer active:scale-95 transform transition-transform">
+            <img src="1366_2000-removebg-preview.png" class="w-3 h-3 sm:w-4 sm:h-4 object-contain">
+            <span class="text-[10px] sm:text-xs font-bold uppercase tracking-wide leading-none">Ver otro ejemplo</span>
+        </button>
+
+        <div class="flex flex-col items-end leading-tight min-w-0 w-auto flex-shrink">
             <span id="random-medico"
                 class="text-[9px] sm:text-[11px] font-medium tracking-wider opacity-90 text-right leading-tight">
             </span>
 
             <span id="hora-acceso"
-                class="text-[9px] sm:text-[11px] tracking-wider opacity-80 text-right leading-tight">
+                class="text-[9px] sm:text-[11px] tracking-wider opacity-80 text-right leading-tight hidden sm:block">
             </span>
         </div>
     </div>
 </header>
 
-<!-- CONTENIDO -->
 <main class="max-w-lg mx-auto px-4 sm:px-6 py-4 space-y-4">
 
-    <!-- TARJETA PRINCIPAL -->
     <section class="bg-white rounded-lg card-shadow border border-gray-200 p-4 relative overflow-hidden">
         <div class="absolute left-0 top-0 bottom-0 w-1 bg-medical-primary"></div>
 
@@ -138,8 +141,7 @@ body {
             </button>
         </div>
     </section>
-        <!-- ADVERTENCIAS -->
-    <section class="bg-yellow-50 border-l-4 border-yellow-400 rounded-r-lg p-4 flex gap-3 shadow-sm">
+        <section class="bg-yellow-50 border-l-4 border-yellow-400 rounded-r-lg p-4 flex gap-3 shadow-sm">
         <i class="ph-fill ph-warning text-yellow-600 text-2xl mt-0.5"></i>
         <div>
             <h3 class="text-yellow-800 font-bold text-sm uppercase mb-1">Advertencias Críticas</h3>
@@ -147,19 +149,16 @@ body {
         </div>
     </section>
 
-    <!-- CONDICIONES CLÍNICAS -->
     <section>
         <h3 class="text-xs font-bold text-gray-500 uppercase mb-2">Condiciones Clínicas Relevantes</h3>
         <div id="lista-condiciones" class="grid grid-cols-1 gap-2"></div>
     </section>
 
-    <!-- IMPLANTES -->
     <section>
         <h3 class="text-xs font-bold text-gray-500 uppercase mb-2">Implantes / Operaciones</h3>
         <div id="lista-implantes" class="space-y-2"></div>
     </section>
 
-    <!-- MEDICACIÓN -->
     <section>
         <h3 class="text-xs font-bold text-gray-500 uppercase mb-2">Medicación Actual</h3>
         <div class="bg-white border rounded card-shadow overflow-hidden">
@@ -170,7 +169,6 @@ body {
     <div class="h-4"></div>
 </main>
 
-<!-- FOOTER -->
 <footer class="mt-auto bg-white border-t text-center py-6">
     <div class="flex flex-col items-center gap-3">
         <div class="w-50 h-12 opacity-90">
@@ -182,7 +180,6 @@ body {
     </div>
 </footer>
 
-<!-- SCRIPT LÓGICA COMPLETA -->
 <script>
 /* FUNCIONES RANDOM */
 function randInt(min, max){return Math.floor(Math.random()*(max-min+1))+min;}
@@ -353,4 +350,3 @@ document.addEventListener("DOMContentLoaded",()=>{
 
 </body>
 </html>
-
