--- a/random/demo-random.html
+++ b/random/demo-random.html
@@ -90,7 +90,7 @@ body {
 
         <button onclick="window.location.reload()" 
                 class="bg-white text-medical-primary hover:bg-gray-100 transition-colors px-3 py-1.5 rounded flex items-center gap-2 shadow-sm flex-shrink-0 mx-2 cursor-pointer active:scale-95 transform transition-transform">
-            <img src="1366_2000-removebg-preview.png" class="w-3 h-3 sm:w-4 sm:h-4 object-contain">
+            <img src="/random/refresh.png" class="w-3 h-3 sm:w-4 sm:h-4 object-contain">
             <span class="text-[10px] sm:text-xs font-bold uppercase tracking-wide leading-none">Ver otro ejemplo</span>
         </button>
 
@@ -350,3 +350,4 @@ document.addEventListener("DOMContentLoaded",()=>{
 
 </body>
 </html>
+
