--- a/random/demo-random.html
+++ b/random/demo-random.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sistema C.U.R.A. | Nivel 2 (Demo Aleatoria)</title>
-    <link rel="icon" type="image/png" href="favicon.png">
+
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
@@ -67,7 +67,7 @@ body {
 <body class="min-h-screen flex flex-col pt-28 sm:pt-24 font-sans">
 
 <div id="popup" class="popup">
-  <p>Todos los datos e imágenes aquí proporcionados son ficticios y aleatorios.</p>
+  <p>Todos los datos e imágenes aquí proporcionados son ficticios.</p>
 </div>
 
 <header class="fixed top-0 left-0 w-full bg-medical-primary text-white shadow-md z-50">
@@ -88,12 +88,6 @@ body {
             </div>
         </div>
 
-        <button onclick="window.location.reload()" 
-                class="bg-white text-medical-primary hover:bg-gray-100 transition-colors px-3 py-1.5 rounded flex items-center gap-2 shadow-sm flex-shrink-0 mx-2 cursor-pointer active:scale-95 transform transition-transform">
-            <img src="/random/refresh.png" class="w-3 h-3 sm:w-4 sm:h-4 object-contain">
-            <span class="text-[10px] sm:text-xs font-bold uppercase tracking-wide leading-none">Ver otro ejemplo</span>
-        </button>
-
         <div class="flex flex-col items-end leading-tight min-w-0 w-auto flex-shrink">
             <span id="random-medico"
                 class="text-[9px] sm:text-[11px] font-medium tracking-wider opacity-90 text-right leading-tight">
@@ -107,6 +101,14 @@ body {
 </header>
 
 <main class="max-w-lg mx-auto px-4 sm:px-6 py-4 space-y-4">
+
+    <div class="flex justify-end pb-1">
+        <button onclick="window.location.reload()" 
+                class="bg-white text-medical-primary hover:bg-gray-100 transition-colors px-3 py-1.5 rounded flex items-center gap-2 shadow-sm border border-gray-200 active:scale-95 transform transition-transform">
+            <img src="/random/refresh.png" class="w-3 h-3 sm:w-4 sm:h-4 object-contain">
+            <span class="text-[10px] sm:text-xs font-bold uppercase tracking-wide leading-none">Ver otro ejemplo</span>
+        </button>
+    </div>
 
     <section class="bg-white rounded-lg card-shadow border border-gray-200 p-4 relative overflow-hidden">
         <div class="absolute left-0 top-0 bottom-0 w-1 bg-medical-primary"></div>
@@ -141,7 +143,8 @@ body {
             </button>
         </div>
     </section>
-        <section class="bg-yellow-50 border-l-4 border-yellow-400 rounded-r-lg p-4 flex gap-3 shadow-sm">
+
+    <section class="bg-yellow-50 border-l-4 border-yellow-400 rounded-r-lg p-4 flex gap-3 shadow-sm">
         <i class="ph-fill ph-warning text-yellow-600 text-2xl mt-0.5"></i>
         <div>
             <h3 class="text-yellow-800 font-bold text-sm uppercase mb-1">Advertencias Críticas</h3>
@@ -344,7 +347,7 @@ document.addEventListener("DOMContentLoaded",()=>{
     /* POPUP */
     const popup=document.getElementById("popup");
     popup.classList.add("show");
-    setTimeout(()=>popup.classList.remove("show"),6000);
+    setTimeout(()=>popup.classList.remove("show"),2000);
 });
 </script>
 
