--- a/random/demo-random.html
+++ b/random/demo-random.html
@@ -67,7 +67,7 @@ body {
 <body class="min-h-screen flex flex-col pt-28 sm:pt-24 font-sans">
 
 <div id="popup" class="popup">
-  <p>Todos los datos e imágenes aquí proporcionados son ficticios.</p>
+  <p>Todos los datos e imágenes aquí proporcionados son ficticios y generados aleatoriamente.</p>
 </div>
 
 <header class="fixed top-0 left-0 w-full bg-medical-primary text-white shadow-md z-50">
@@ -353,6 +353,7 @@ document.addEventListener("DOMContentLoaded",()=>{
 
 </body>
 </html>
+
 
 
 
