--- a/random/demo-random.html
+++ b/random/demo-random.html
@@ -110,9 +110,10 @@ body {
 
 <main class="max-w-lg mx-auto px-4 sm:px-6 py-4 space-y-4">
 
-    <div class="flex justify-end pb-1">
+
+    <div class="pb-2">
         <button onclick="window.location.reload()" 
-                class="bg-white text-medical-primary hover:bg-gray-100 transition-colors px-3 py-1.5 rounded flex items-center gap-2 shadow-sm border border-gray-200 active:scale-95 transform transition-transform">
+                class="w-full bg-white text-medical-primary hover:bg-gray-100 transition-colors px-3 py-2 rounded flex items-center justify-center gap-2 shadow-sm border border-gray-200 active:scale-95 transform transition-transform cursor-pointer">
             <img src="/random/refresh.png" class="w-3 h-3 sm:w-4 sm:h-4 object-contain">
             <span class="text-[10px] sm:text-xs font-bold uppercase tracking-wide leading-none">Ver otro ejemplo</span>
         </button>
@@ -361,6 +362,7 @@ document.addEventListener("DOMContentLoaded",()=>{
 
 </body>
 </html>
+
 
 
 
