--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
             Tu salud, simplificada y segura.
           </h2>
           <p class="text-sm text-white/90 leading-relaxed">
-           La Ley C.U.R.A. crea la Credencial Única para que tu historia clínica viaje con vos. Un solo sistema que garantiza atención rápida, justa y sin papeles.
+           La #LeyCURA crea la Credencial Única para que tu historia clínica viaje con vos. Un solo sistema que garantiza atención rápida, justa y sin papeles.
           </p>
         </div>
 
