--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@
             Firmas digitales al instante sin ir al consultorio.
           </div>
           <div class="bg-cura-primaryDark/30 border border-cura-accent/40 rounded-lg px-3 py-2">
-            <strong class="text-white block mb-1">Emergencias QR</strong>
+            <strong class="text-white block mb-1">Emergencias QR / NFC</strong>
             Datos críticos escaneando tu credencial.
           </div>
           <div class="bg-cura-primaryDark/30 border border-cura-accent/40 rounded-lg px-3 py-2">
@@ -274,7 +274,7 @@
       <div class="bg-cura-card rounded-xl border border-cura-accent/40 p-4 shadow-md"><h3 class="text-sm font-semibold text-white mb-1">Fin del papeleo</h3><p class="text-xs text-cura-accentLight">Órdenes, estudios y certificados pasan a digital, evitando pérdidas, sellos y trámites repetidos.</p></div>
       <div class="bg-cura-card rounded-xl border border-cura-accent/40 p-4 shadow-md"><h3 class="text-sm font-semibold text-white mb-1">Recetas automáticas</h3><p class="text-xs text-cura-accentLight">Firmas digitales automáticas: no hace falta volver al consultorio para renovar o validar recetas.</p></div>
       <div class="bg-cura-card rounded-xl border border-cura-accent/40 p-4 shadow-md"><h3 class="text-sm font-semibold text-white mb-1">PAMI sin burocracia</h3><p class="text-xs text-cura-accentLight">Turnos ágiles, menos trámites presenciales y traslados automatizados para movilidad reducida.</p></div>
-      <div class="bg-cura-card rounded-xl border border-cura-accent/40 p-4 shadow-md"><h3 class="text-sm font-semibold text-white mb-1">Mejor atención en emergencias</h3><p class="text-xs text-cura-accentLight">El QR permite identificar a la persona y ver alergias y medicación en segundos.</p></div>
+      <div class="bg-cura-card rounded-xl border border-cura-accent/40 p-4 shadow-md"><h3 class="text-sm font-semibold text-white mb-1">Mejor atención en emergencias</h3><p class="text-xs text-cura-accentLight">El QR/NFC y/o ID-CURA permite identificar a la persona y ver alergias y medicación en segundos.</p></div>
       <div class="bg-cura-card rounded-xl border border-cura-accent/40 p-4 shadow-md"><h3 class="text-sm font-semibold text-white mb-1">Evita estudios repetidos</h3><p class="text-xs text-cura-accentLight">Los médicos ven estudios previos al instante, evitando repetir análisis innecesarios.</p></div>
       <div class="bg-cura-card rounded-xl border border-cura-accent/40 p-4 shadow-md"><h3 class="text-sm font-semibold text-white mb-1">Más tiempo para el paciente</h3><p class="text-xs text-cura-accentLight">Menos carga administrativa, más tiempo real de atención y acompañamiento.</p></div>
       <div class="bg-cura-card rounded-xl border border-cura-accent/40 p-4 shadow-md"><h3 class="text-sm font-semibold text-white mb-1">Turnos sin vueltas</h3><p class="text-xs text-cura-accentLight">Agenda integrada para reducir esperas entre hospitales, clínicas y obras sociales.</p></div>
@@ -412,7 +412,7 @@
       <p>Copyright © 2025 C.U.R.A. - Todos los derechos reservados.</p>
       <div class="flex flex-wrap gap-3">
         <a href="#informacion" class="hover:text-white">Información</a>
-        <a href="/demonivel2.html" target="_blank" class="hover:text-white">Demo QR Nivel 2</a>
+        <a href="/demonivel2.html" target="_blank" class="hover:text-white">Demo Enfermero</a>
         <a href="#contacto" class="hover:text-white">Contacto</a>
       </div>
     </div>
