--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
           </h2>
           <p class="text-sm text-white/90 leading-relaxed">
               
-           La <strong class="text-white block mb-1">#LeyCura</strong> crea la Credencial Única para que tu historia clínica viaje con vos. Un solo sistema que garantiza atención rápida, justa y sin papeles.
+           La <strong>#LeyCura</strong> crea la Credencial Única para que tu historia clínica viaje con vos. Un solo sistema que garantiza atención rápida, justa y sin papeles.
           </p>
         </div>
 
