--- a/index.html
+++ b/index.html
@@ -425,7 +425,7 @@
         <div class="flex-1">
           <h2 class="text-sm sm:text-base font-semibold text-white mb-1">Bienvenido, tenemos novedades</h2>
           <div class="text-[11px] sm:text-[13px] text-cura-accentLight">
-            <p class="leading-snug">La ley será presentada por primera vez del 28 al 30 de abril de 2026<br>en el V Congreso Internacional sobre Transformaciones en las Administraciones Públicas.</p>
+            <p class="leading-snug">La ley será presentada por primera vez del 28 al 30 de abril de 2026<br>en el <strong>V Congreso Internacional sobre Transformaciones en las Administraciones Públicas.</strong> </p>
           </div>
         </div>
         <button type="button" class="ml-2 text-cura-accentLight/80 hover:text-white text-xs sm:text-sm font-semibold" id="novedades-close-btn">✕</button>
