--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
         <div class="md:col-span-2 grid sm:grid-cols-2 gap-3 text-xs text-cura-accentLight">
           <div class="bg-cura-primaryDark/30 border border-cura-accent/40 rounded-lg px-3 py-2">
             <strong class="text-white block mb-1">Acceso Inmediato</strong>
-            Accedé a tu información médica desde cualquier lugar.
+            Accedé a tu información médica desde cualquier lugar del país.
           </div>
           <div class="bg-cura-primaryDark/30 border border-cura-accent/40 rounded-lg px-3 py-2">
             <strong class="text-white block mb-1">Chau Papel</strong>
