--- a/index.html
+++ b/index.html
@@ -269,7 +269,7 @@
       </div>
 
      <div class="grid md:grid-cols-3 gap-4">
-      <div class="bg-cura-card rounded-xl border border-cura-accent/40 p-4 shadow-md"><h3 class="text-sm font-semibold text-white mb-1">Unificación</h3><p class="text-xs text-cura-accentLight">Un solo identificador de salud por persona, integrando datos de hospitales públicos, privados y de la seguridad social.</p></div>
+      <div class="bg-cura-card rounded-xl border border-cura-accent/40 p-4 shadow-md"><h3 class="text-sm font-semibold text-white mb-1">Tu DNI de salud</h3><p class="text-xs text-cura-accentLight"Funciona como un documento único que unifica tu historia clínica del sector público, privado y obras sociales.</p></div>
       <div class="bg-cura-card rounded-xl border border-cura-accent/40 p-4 shadow-md"><h3 class="text-sm font-semibold text-white mb-1">Seguridad y privacidad</h3><p class="text-xs text-cura-accentLight">Accesos por niveles, auditorías y confidencialidad estricta de los datos de cada paciente.</p></div>
       <div class="bg-cura-card rounded-xl border border-cura-accent/40 p-4 shadow-md"><h3 class="text-sm font-semibold text-white mb-1">Interoperabilidad</h3><p class="text-xs text-cura-accentLight">LLeva tu historia clinica a donde sea que vayas, podrás acceder a tu historia clinica desde cualquier ciudad o provincia.</p></div>
       <div class="bg-cura-card rounded-xl border border-cura-accent/40 p-4 shadow-md"><h3 class="text-sm font-semibold text-white mb-1">Fin del papeleo</h3><p class="text-xs text-cura-accentLight">Órdenes, estudios y certificados pasan a digital, evitando pérdidas, sellos y trámites repetidos.</p></div>
