--- a/index.html
+++ b/index.html
@@ -269,20 +269,32 @@
       </div>
 
      <div class="grid md:grid-cols-3 gap-4">
-      <div class="bg-cura-card rounded-xl border border-cura-accent/40 p-4 shadow-md"><h3 class="text-sm font-semibold text-white mb-1">Tu DNI de salud</h3><p class="text-xs text-cura-accentLight"Funciona como un <strong> documento único que unifica tu historia clínica</strong> del sector público, privado y obras sociales.</p></div>
-      <div class="bg-cura-card rounded-xl border border-cura-accent/40 p-4 shadow-md"><h3 class="text-sm font-semibold text-white mb-1">Seguridad y privacidad</h3><p class="text-xs text-cura-accentLight"> </p>Auditorías estrictas y accesos por niveles donde<strong>vos decidís qué información compartir</strong> con cada profesional.</div>
-      <div class="bg-cura-card rounded-xl border border-cura-accent/40 p-4 shadow-md"><h3 class="text-sm font-semibold text-white mb-1">Interoperabilidad</h3><p class="text-xs text-cura-accentLight">LLeva tu historia clinica a donde sea que vayas, podrás acceder a tu historia clinica desde cualquier ciudad o provincia.</p></div>
-      <div class="bg-cura-card rounded-xl border border-cura-accent/40 p-4 shadow-md"><h3 class="text-sm font-semibold text-white mb-1">Fin del papeleo</h3><p class="text-xs text-cura-accentLight">Órdenes, estudios y certificados pasan a digital, evitando pérdidas, sellos y trámites repetidos.</p></div>
-      <div class="bg-cura-card rounded-xl border border-cura-accent/40 p-4 shadow-md"><h3 class="text-sm font-semibold text-white mb-1">Recetas automáticas</h3><p class="text-xs text-cura-accentLight">Firmas digitales automáticas: no hace falta volver al consultorio para renovar o validar recetas.</p></div>
-      <div class="bg-cura-card rounded-xl border border-cura-accent/40 p-4 shadow-md"><h3 class="text-sm font-semibold text-white mb-1">PAMI sin burocracia</h3><p class="text-xs text-cura-accentLight">Turnos ágiles, menos trámites presenciales y traslados automatizados para movilidad reducida.</p></div>
-      <div class="bg-cura-card rounded-xl border border-cura-accent/40 p-4 shadow-md"><h3 class="text-sm font-semibold text-white mb-1">Mejor atención en emergencias</h3><p class="text-xs text-cura-accentLight">El QR/NFC y/o ID-CURA permite identificar a la persona y ver alergias y medicación en segundos.</p></div>
-      <div class="bg-cura-card rounded-xl border border-cura-accent/40 p-4 shadow-md"><h3 class="text-sm font-semibold text-white mb-1">Evita estudios repetidos</h3><p class="text-xs text-cura-accentLight">Los médicos ven estudios previos al instante, evitando repetir análisis innecesarios.</p></div>
-      <div class="bg-cura-card rounded-xl border border-cura-accent/40 p-4 shadow-md"><h3 class="text-sm font-semibold text-white mb-1">Más tiempo para el paciente</h3><p class="text-xs text-cura-accentLight">Menos carga administrativa, más tiempo real de atención y acompañamiento.</p></div>
-      <div class="bg-cura-card rounded-xl border border-cura-accent/40 p-4 shadow-md"><h3 class="text-sm font-semibold text-white mb-1">Turnos sin vueltas</h3><p class="text-xs text-cura-accentLight">Agenda integrada para reducir esperas entre hospitales, clínicas y obras sociales.</p></div>
-      <div class="bg-cura-card rounded-xl border border-cura-accent/40 p-4 shadow-md"><h3 class="text-sm font-semibold text-white mb-1">Ahorro para todo el sistema</h3><p class="text-xs text-cura-accentLight">Menos errores, menos pérdidas y menos costos administrativos que se reinvierten en salud.</p></div>
-      <div class="bg-cura-card rounded-xl border border-cura-accent/40 p-4 shadow-md"><h3 class="text-sm font-semibold text-white mb-1">Información en el país y exterior</h3><p class="text-xs text-cura-accentLight">Disponible en todo el país y en instituciones del exterior que usen estándares compatibles.</p></div>
+      <div class="bg-cura-card rounded-xl border border-cura-accent/40 p-4 shadow-md"><h3 class="text-sm font-semibold text-white mb-1">Tu DNI de salud</h3><p class="text-xs text-cura-accentLight">Funciona como un <strong> documento único que unifica tu historia clínica</strong> del sector público, privado y obras sociales.</p></div>
+      <div class="bg-cura-card rounded-xl border border-cura-accent/40 p-4 shadow-md"><h3 class="text-sm font-semibold text-white mb-1">Seguridad y privacidad</h3><p class="text-xs text-cura-accentLight"> Auditorías estrictas y accesos por niveles donde<strong>vos decidís qué información compartir</strong> con cada profesional.</p></div>
+      <div class="bg-cura-card rounded-xl border border-cura-accent/40 p-4 shadow-md"><h3 class="text-sm font-semibold text-white mb-1">Interoperabilidad</h3><p class="text-xs text-cura-accentLight">Tu historia clínica viaja con vos. Disponible para consultar en cualquier ciudad, provincia o país del exterior.</p></div>
+      <div class="bg-cura-card rounded-xl border border-cura-accent/40 p-4 shadow-md"><h3 class="text-sm font-semibold text-white mb-1">Fin del papeleo</h3><p class="text-xs text-cura-accentLight">Órdenes, estudios y certificados pasan a digital. Olvidate de perder papeles o llevar estudios viejos.</p></div>
+      <div class="bg-cura-card rounded-xl border border-cura-accent/40 p-4 shadow-md"><h3 class="text-sm font-semibold text-white mb-1">Recetas automáticas</h3><p class="text-xs text-cura-accentLight">¿Medicación crónica? Recibí y validá tus recetas automáticamente sin volver al consultorio.</p></div>
+      <div class="bg-cura-card rounded-xl border border-cura-accent/40 p-4 shadow-md"><h3 class="text-sm font-semibold text-white mb-1">Simplificamos PAMI</h3><p class="text-xs text-cura-accentLight">Menos filas y trámites presenciales. Turnos rápidos y traslados automáticos para quienes más lo necesitan.</p></div>
+      <div class="bg-cura-card rounded-xl border border-cura-accent/40 p-4 shadow-md"><h3 class="text-sm font-semibold text-white mb-1">Salvavidas</h3><p class="text-xs text-cura-accentLight">En una urgencia, un escaneo rápido (QR/NFC) revela tus alergias y datos vitales para salvarte la vida.</p></div>
+      <div class="bg-cura-card rounded-xl border border-cura-accent/40 p-4 shadow-md"><h3 class="text-sm font-semibold text-white mb-1">Basta de repetir estudios</h3><p class="text-xs text-cura-accentLight">Si ya te lo hiciste, el médico lo ve. Ahorrá tiempo y molestias innecesarias.</p></div>
+      <div class="bg-cura-card rounded-xl border border-cura-accent/40 p-4 shadow-md"><h3 class="text-sm font-semibold text-white mb-1">Atención más humana</h3><p class="text-xs text-cura-accentLight">La tecnología se ocupa de los datos, el médico se ocupa de vos.</p></div>
+      <div class="bg-cura-card rounded-xl border border-cura-accent/40 p-4 shadow-md"><h3 class="text-sm font-semibold text-white mb-1">Conseguí turno rápido</h3><p class="text-xs text-cura-accentLight">Agenda unificada que encuentra el turno más cercano entre hospitales y clínicas.</p></div>
+      <div class="bg-cura-card rounded-xl border border-cura-accent/40 p-4 shadow-md"><h3 class="text-sm font-semibold text-white mb-1">Recursos donde importan</h3><p class="text-xs text-cura-accentLight">Al reducir errores y gastos administrativos, el dinero vuelve en mejor atención e insumos.</p></div>
+      <div class="bg-cura-card rounded-xl border border-cura-accent/40 p-4 shadow-md"><h3 class="text-sm font-semibold text-white mb-1">Alertas de salud</h3><p class="text-xs text-cura-accentLight">Recibí recordatorios automáticos de vacunas, chequeos anuales y controles preventivos según tu edad.</p></div>
      </div>
     </section>
+    <!-- INICIO DEL BOTÓN -->
+<div class="mt-10 flex justify-center">
+    <a href="/Informacion/informacion.html" 
+       class="group relative inline-flex items-center gap-2 px-8 py-3 bg-cura-accent hover:bg-cura-accent/80 text-white font-medium text-sm md:text-base rounded-full transition-all duration-300 shadow-lg hover:shadow-cura-accent/25 hover:-translate-y-0.5 border border-white/10">
+        <span>Hay más beneficios. <strong>¿Querés saber más? Hacé click acá</strong></span>
+        <!-- Flechita animada -->
+        <svg xmlns="http://www.w3.org/2000/svg" class="h-4 w-4 transition-transform group-hover:translate-x-1" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M14 5l7 7m0 0l-7 7m7-7H3" />
+        </svg>
+    </a>
+</div>
+<!-- FIN DEL BOTÓN -->
 
     <section id="sumate" class="space-y-6">
       <div class="max-w-2xl">
