--- a/Informacion/Informacion.html
+++ b/Informacion/Informacion.html
@@ -64,7 +64,7 @@
 
       <div class="flex items-center gap-2">
         <!-- Asumiendo ruta absoluta para el logo -->
-        <img src="/logo.png"
+        <img src="/Informacion/logo.png"
              alt="Logo C.U.R.A."
              class="h-16 w-auto object-contain shrink-0" />
         <div class="leading-tight">
