--- a/Informacion/informacion.html
+++ b/Informacion/informacion.html
@@ -104,7 +104,7 @@
                     <!-- Foto Circular -->
                     <div class="w-32 h-32 rounded-full overflow-hidden border-4 border-cura-accent mb-4 shadow-md bg-white">
                         <!-- Reemplazar src con la foto real -->
-                        <img src="https://via.placeholder.com/150" alt="Franco Agustin Paganini" class="w-full h-full object-cover">
+                        <img src="https://media.licdn.com/dms/image/v2/D4D03AQH_6Hwe5o0lNA/profile-displayphoto-scale_400_400/B4DZq8uewJGgAg-/0/1764102894265?e=1766016000&v=beta&t=SAnN0L37gfKv16mUk1CagmLaPKUjwvYfCNasGXT9Gds" alt="Franco Agustin Paganini" class="w-full h-full object-cover">
                     </div>
                     
                     <!-- Nombre -->
