--- a/Informacion/informacion.html
+++ b/Informacion/informacion.html
@@ -108,7 +108,7 @@
                     </div>
                     
                     <!-- Nombre -->
-                    <h2 class="text-xl font-bold text-white mb-3">Franco Agustin Paganini</h2>
+                    <h2 class="text-xl font-bold text-white mb-3">Franco A. Paganini</h2>
                     
                     <!-- Botón LinkedIn -->
                     <a href="https://linkedin.com/in/franco-paganini" target="_blank" class="inline-flex items-center gap-2 px-4 py-2 bg-[#0077b5] hover:bg-[#005e93] text-white text-sm font-semibold rounded-md transition-colors w-full justify-center mb-4">
@@ -122,10 +122,16 @@
                     <!-- Texto Biografía -->
                     <div class="text-sm text-cura-accentLight text-left mt-3 space-y-3 leading-relaxed">
                         <p>
-                            Aquí puedes escribir tu biografía profesional. Cuenta un poco sobre tu experiencia, tu rol en el proyecto Ley C.U.R.A. y tu visión sobre la salud digital.
+                            Franco Agustín Paganini es técnico en sistemas con más de diez años de experiencia en soporte, infraestructura y soluciones tecnológicas aplicadas al sector público. Complementó su formación con certificaciones internacionales en <strong> Interoperabilidad en Salud, Estándar FHIR HL7, Sistemas de Información en Salud, Legislación y técnica normativa, Derecho presupuestario</strong>, y múltiples cursos de la OPS/OMS orientados a la digitalización sanitaria.
                         </p>
                         <p>
-                            Este espacio es ideal para destacar tus logros y conectar con quienes visitan la página.
+                           Su trabajo se centra en la modernización del Estado, la transformación digital y el diseño de herramientas que mejoren la calidad, eficiencia y transparencia de los servicios públicos. Actualmente está al frente del desarrollo de la <strong>Ley C.U.R.A.</strong>, una iniciativa que busca unificar la historia clínica, optimizar procesos médicos y garantizar un sistema sanitario más seguro, moderno e inclusivo para toda la población.
+                        </p>
+                           <p>
+                          La motivación del proyecto nace de experiencias personales dentro del sistema de salud, donde vivió de primera mano problemas de fragmentación, falta de interoperabilidad, pérdida de información, trámites repetitivos, demoras, diagnósticos inconexos y situaciones que pusieron en riesgo la atención médica. Esta vivencia lo impulsó a transformar esa frustración en una propuesta concreta, técnica y viable para que ninguna persona vuelva a pasar por lo mismo.
+                        </p>
+                           <p>
+                          Con una visión centrada en el paciente, un enfoque técnico sólido y un compromiso real con la mejora del sistema sanitario, Franco impulsa la Ley C.U.R.A. como un cambio estructural necesario para el futuro de la salud en Argentina.
                         </p>
                     </div>
                 </div>
