--- a/Informacion/informacion.html
+++ b/Informacion/informacion.html
@@ -69,7 +69,7 @@
              class="h-16 w-auto object-contain shrink-0" />
         <div class="leading-tight">
           <p class="text-[11px] uppercase tracking-[0.25em] text-cura-accentLight">LEY NACIONAL</p>
-          <p class="text-sm font-bold text-white">Información Detallada</p>
+          <p class="text-sm font-bold text-white">Transformación Digital Sanitaria Argentina</p>
         </div>
       </div>
 
