--- a/Informacion/informacion.html
+++ b/Informacion/informacion.html
@@ -69,13 +69,15 @@
              class="h-16 w-auto object-contain shrink-0" />
         <div class="leading-tight">
           <p class="text-[11px] uppercase tracking-[0.25em] text-cura-accentLight">LEY NACIONAL</p>
-          <p class="text-sm font-bold text-white">Información Detallada</p>
+          <p class="text-sm font-bold text-white">Transformación Digital Sanitaria Argentina</p>
         </div>
       </div>
 
       <nav class="flex items-center gap-4 text-sm font-medium whitespace-nowrap justify-center sm:justify-end mt-2 sm:mt-0">
-        <a href="/index.html" class="text-cura-accentLight hover:text-white transition-colors flex items-center gap-1">
-            <span>←</span> Volver a la página principal
+        <!-- BOTÓN VOLVER CON ANIMACIÓN -->
+        <a href="/index.html" class="group text-cura-accentLight hover:text-white transition-all duration-300 flex items-center gap-1 hover:-translate-y-0.5">
+            <span class="transition-transform duration-300 group-hover:-translate-x-1 font-bold text-lg">←</span> 
+            Volver
         </a>
         <a href="#sumate" class="text-cura-accentLight hover:text-white transition-colors uppercase font-bold nav-scroll-link">
             Sumate
